Opened 11 years ago

Closed 9 years ago

#10503 closed bug (fixed)

[servers/app/drawing] DWindowHWInterface.cpp: Memory leak

Reported by: mt Owned by: axeld
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In DWindowHWInterface::_OpenAccelerant(), function returns without freeing 'cloneInfoData', pointed by cppcheck. http://cgit.haiku-os.org/haiku/tree/src/servers/app/drawing/DWindowHWInterface.cpp#n530

Attachments (1)

0004-Fix-memory-leak.patch (855 bytes ) - added by mt 11 years ago.

Download all attachments as: .zip

Change History (3)

by mt, 11 years ago

Attachment: 0004-Fix-memory-leak.patch added

comment:1 by mt, 11 years ago

patch: 01

comment:2 by waddlesplash, 9 years ago

Resolution: fixed
Status: newclosed

Applied in hrev49228. Thanks!

Note: See TracTickets for help on using tickets.