app_server: fix memory leak.

Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>
Fixes #10503.